refactoring for grouped rule calculation